--- a/library.server/pom.xml
+++ b/library.server/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>mail</artifactId>
             <version>1.5.0-b01</version>
         </dependency>
+        <dependency>
+            <groupId>pl.put.miasi</groupId>
+            <artifactId>library.db</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
