--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
         <maven.compiler.target>10</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
