--- a/library.client/pom.xml
+++ b/library.client/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>javafx-swing</artifactId>
 			<version>11.0.2</version>
 		</dependency>
+        <dependency>
+            <groupId>pl.put.miasi</groupId>
+            <artifactId>library.server</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 </project>
