--- a/library.db/pom.xml
+++ b/library.db/pom.xml
@@ -8,6 +8,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <release>10</release>
                     <source>11</source>
                     <target>11</target>
                 </configuration>
